// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown basic 1`] = `
<div
  class="t-word-balloon t-dropdown t-word-balloon--bottom-start t-dropdown-enter-active t-dropdown-enter-to"
  style="top: 10px; left: 0px;"
>
  <div
    class="t-word-balloon__content"
  >
    <div
      class="t-dropdown__body"
    >
      <ul
        class="t-dropdown__options"
      >
        <li
          class="t-option t--size-m"
          role="option"
        >
          黄金蛋炒饭
        </li>
        <li
          class="t-divider t-dropdown__divider t-divider--center t-divider--horizontal"
          style="--t-divider-border-style: solid; --t-divider-border-width: 1px;"
        />
        <li
          class="t-option t--size-m"
          role="option"
        >
          扬州炒饭
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown basic 2`] = `
<div
  class="t-word-balloon t-dropdown t-word-balloon--bottom-start t-dropdown-leave-active t-dropdown-leave-to"
  style="top: 10px; left: 0px;"
>
  <div
    class="t-word-balloon__content"
  >
    <div
      class="t-dropdown__body"
    >
      <ul
        class="t-dropdown__options"
      >
        <li
          class="t-option t--size-m"
          role="option"
        >
          黄金蛋炒饭
        </li>
        <li
          class="t-divider t-dropdown__divider t-divider--center t-divider--horizontal"
          style="--t-divider-border-style: solid; --t-divider-border-width: 1px;"
        />
        <li
          class="t-option t--size-m"
          role="option"
        >
          扬州炒饭
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown disabled 1`] = `
<div
  class="t-word-balloon t-dropdown t-word-balloon--bottom-start t-dropdown-enter-active t-dropdown-enter-to"
  style="top: 10px; left: 0px;"
>
  <div
    class="t-word-balloon__content"
  >
    <div
      class="t-dropdown__body"
    >
      <ul
        class="t-dropdown__options"
      >
        <li
          class="t-option t--size-m"
          disabled=""
          role="option"
        >
          黄金蛋炒饭
        </li>
        <li
          class="t-option t--size-m"
          role="option"
        >
          扬州炒饭
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown group 1`] = `
<div
  class="t-word-balloon t-dropdown t-word-balloon--bottom-start t-dropdown-enter-active t-dropdown-enter-to"
  style="top: 10px; left: 0px;"
>
  <div
    class="t-word-balloon__content"
  >
    <div
      class="t-dropdown__body"
    >
      <ul
        class="t-dropdown__options"
      >
        <li
          class="t-dropdown__group"
        >
          <div
            class="t-option t-dropdown__group-title t--size-m t-option--readonly"
            role="heading"
          >
            饭菜类
          </div>
          <ul
            class="t-dropdown__group-body"
          >
            <li
              class="t-option t--size-m"
              role="option"
            >
              手撕鸡
            </li>
            <li
              class="t-dropdown__group"
            >
              <div
                class="t-option t-dropdown__group-title t--size-m t-option--readonly"
                role="heading"
              >
                炒饭
              </div>
              <ul
                class="t-dropdown__group-body"
              >
                <li
                  class="t-option t--size-m"
                  role="option"
                >
                  黄金蛋炒饭
                </li>
                <li
                  class="t-option t--size-m"
                  role="option"
                >
                  扬州炒饭
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li
          class="t-option t--size-m"
          role="option"
        >
          其他
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown header footer 1`] = `
<div
  class="t-word-balloon t-dropdown t-word-balloon--bottom-start t-dropdown-enter-active t-dropdown-enter-to"
  style="top: 10px; left: 0px;"
>
  <div
    class="t-word-balloon__content"
  >
    <div
      class="t-dropdown__header"
    >
      <h1>
        header
      </h1>
    </div>
    <div
      class="t-dropdown__body"
    >
      <ul
        class="t-dropdown__options"
      >
        <li
          class="t-option t--size-m"
          role="option"
        >
          黄金蛋炒饭
        </li>
        <li
          class="t-option t--size-m"
          role="option"
        >
          扬州炒饭
        </li>
      </ul>
    </div>
    <div
      class="t-dropdown__footer"
    >
      <div>
        footer
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown nest 1`] = `
<div
  class="t-word-balloon t-dropdown t-word-balloon--bottom-start t-dropdown-enter-active t-dropdown-enter-to"
  style="top: 10px; left: 0px;"
>
  <div
    class="t-word-balloon__content"
  >
    <div
      class="t-dropdown__body"
    >
      <ul
        class="t-dropdown__options"
      >
        <li
          class="t-option t--size-m"
          role="option"
        >
          手撕鸡
        </li>
        <li
          class="t-option nest-option t--size-m"
          role="option"
        >
          <span
            class="t-option__label"
          >
            <div>
              蛋炒饭
            </div>
            <div
              class="t-word-balloon t-dropdown t-dropdown__nest t-word-balloon--right-start t-dropdown-enter-active t-dropdown-enter-to"
              style="top: 0px; left: 0px;"
            >
              <div
                class="t-word-balloon__content"
              >
                <div
                  class="t-dropdown__body"
                >
                  <ul
                    class="t-dropdown__options"
                  >
                    <li
                      class="t-option t--size-m"
                      role="option"
                    >
                      黄金蛋炒饭,黄金蛋炒饭
                    </li>
                    <li
                      class="t-option t--size-m"
                      role="option"
                    >
                      扬州炒饭
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </span>
          <i
            class="t-icon t-option__expand"
            role="img"
          >
            <svg
              viewBox="0 0 1024 1024"
            >
              <path
                d="M636.91389854 512.22982846L217.86080278 92.94690423l81.32081573-81.20590149 500.25899726 500.52713049L299.14331376 1012.25899726l-81.20590149-81.282511z"
                fill="currentColor"
              />
            </svg>
          </i>
        </li>
        <li
          class="t-divider t-dropdown__divider t-divider--center t-divider--horizontal"
          style="--t-divider-border-style: solid; --t-divider-border-width: 1px;"
        />
        <li
          class="t-option t--size-m"
          role="option"
        >
          榴莲
        </li>
      </ul>
    </div>
  </div>
</div>
`;
